--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,33 @@
 {
   "coc.preferences.formatOnSave": true,
   "prettier.singleQuote": true,
-  "tsserver.enable": true
+  "tsserver.enable": true,
+  "docker.enable": true,
+  "html-css-support.styleSheets": [
+    "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+  ],
+  "html-css-support.enabledLanguages": [
+    "html",
+    "vue",
+    "blade",
+    "htmldjango",
+    "typescriptreact",
+    "javascriptreact"
+  ],
+  "languageserver": {
+    "csharp-ls": {
+      "command": "csharp-ls",
+      "filetypes": ["cs"],
+      "rootPatterns": ["*.csproj", ".vim/", ".git/", ".hg/"]
+    },
+    "go": {
+      "command": "gopls",
+      "rootPatterns": ["go.mod"],
+      "trace.server": "verbose",
+      "filetypes": ["go"]
+    }
+  },
+  "omnisharp.trace.server": "information",
+  "omnisharp.debug.server": true,
+  "astro.disableResolveCompletionItem": true
 }
