--- a/coc-settings.json
+++ b/coc-settings.json
@@ -29,5 +29,6 @@
   },
   "omnisharp.trace.server": "information",
   "omnisharp.debug.server": true,
-  "astro.disableResolveCompletionItem": true
+  "astro.disableResolveCompletionItem": true,
+  "Lua.diagnostics.globals": ["vim"]
 }
